@@ -1,3 +1,9 @@
+Thu Jan 10 12:06:46 MST 2002 Matt Kimball <matt@kimball.net>
+
+	* BufferedStream.cs: Initial implemenation.  The synchronous
+	methods for both reading and writing are implemented.  I'll do the
+	asynchronous methods in a bit.
+	
 Wed Jan  9 16:04:39 MST 2002 Matt Kimball <matt@kimball.net>
 
 	* BinaryWriter.cs: Initial implementation.  And it's all there.
